--- a/src/style.css
+++ b/src/style.css
@@ -36,6 +36,8 @@ form {
 .leaderboard {
   list-style: none;
   border: 2px solid #000;
+  max-height: 50vh;
+  overflow-y: scroll;
 }
 
 .leaderboard,
